--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,3 +78,15 @@ h3, h4, h5, h6 {
   color: #FF3366;
   cursor: pointer;
 }
+
+.mat-form-field-type-mat-select .mat-form-field-flex {
+  height: 40px;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-infix {
+  padding-top: 0px;
+}
+
+.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
+  transform: none !important;
+}
